--- a/styles.css
+++ b/styles.css
@@ -13,6 +13,10 @@ header {
     padding: 15px 0;
 }
 
+.center-heading {
+    text-align: center;
+}
+
 nav ul {
     list-style: none;
     text-align: center;
