--- a/styles.css
+++ b/styles.css
@@ -62,6 +62,23 @@ body {
     background-clip: text;
 }
 
+.logo-img {
+    height: 50px;
+    width: auto;
+    display: block;
+    transition: transform 0.3s;
+}
+
+.logo-img:hover {
+    transform: scale(1.05);
+}
+
+.logo a {
+    display: flex;
+    align-items: center;
+    text-decoration: none;
+}
+
 .nav-menu {
     display: flex;
     list-style: none;
