--- a/styles.css
+++ b/styles.css
@@ -61,6 +61,20 @@ body {
     -webkit-text-fill-color: transparent;
     background-clip: text;
 }
+.officer-image {
+    background: var(--gradient);
+    height: 250px;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    overflow: hidden;
+}
+
+.officer-photo {
+    width: 100%;
+    height: 100%;
+    object-fit: cover;
+}
 
 .logo-img {
     height: 200px;
